force-app/main/default/objects/Schedule_WBS__c.object
<CustomObject>
    <fields>
        <fullName>BE_WBS_Detail_ID__c</fullName>
        <label>BE WBS Detail ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ข้อมูล Schedule ของ WBS/CBS</inlineHelpText>
        <label>Schedule File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step 7: Schedule</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>Schedule_WBS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubContractor_Name_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, WBS_CBS_Name__c,&quot;_self&quot;)</formula>
        <label>SubContractor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WBS_CBS_Name__c</fullName>
        <label>SubContractor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS_URL__c</fullName>
        <formula>IF(URL__c == null, &quot;No File&quot; ,HYPERLINK(URL__c, &quot;Open File&quot;, &quot;_self&quot;))</formula>
        <label>Schedule File URL</label>
        <type>Text</type>
    </fields>
    <label>Schedule with Subcontract*</label>
    <nameField>
        <displayFormat>SWBS-{00000}</displayFormat>
        <label>WBS/CBS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>